--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@
 
 header{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 1px 1px 2px black;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    box-shadow: 0.5px 0.5px 0.5px rgb(182, 181, 181);
     height: 100px;
-    padding-top: 20px;
+    padding-top: 10px;
+    font-size: 40px;
 }
 
 #board{
